--- a/app/src/index.html
+++ b/app/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Fake1 Angular</title>
+  <title>Fake1 Angular fail 1</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
